// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Figure should render correctly -100 coloredPositive: false, coloredNegative: false, coloredWarning: false 1`] = `
<div
  className=""
>
  <span
    className="styles__Figure-total___3Z9NO"
  >
    -100,00
  </span>
</div>
`;

exports[`Figure should render correctly -100 coloredPositive: false, coloredNegative: false, coloredWarning: true 1`] = `
<div
  className="styles__Figure-content--warning___1p7x3"
>
  <span
    className="styles__Figure-total___3Z9NO"
  >
    -100,00
  </span>
</div>
`;

exports[`Figure should render correctly -100 coloredPositive: false, coloredNegative: true, coloredWarning: false 1`] = `
<div
  className="styles__Figure-content--negative___21p0c"
>
  <span
    className="styles__Figure-total___3Z9NO"
  >
    -100,00
  </span>
</div>
`;

exports[`Figure should render correctly -100 coloredPositive: false, coloredNegative: true, coloredWarning: true 1`] = `
<div
  className="styles__Figure-content--warning___1p7x3"
>
  <span
    className="styles__Figure-total___3Z9NO"
  >
    -100,00
  </span>
</div>
`;

exports[`Figure should render correctly -100 coloredPositive: true, coloredNegative: false, coloredWarning: false 1`] = `
<div
  className=""
>
  <span
    className="styles__Figure-total___3Z9NO"
  >
    -100,00
  </span>
</div>
`;

exports[`Figure should render correctly -100 coloredPositive: true, coloredNegative: false, coloredWarning: true 1`] = `
<div
  className="styles__Figure-content--warning___1p7x3"
>
  <span
    className="styles__Figure-total___3Z9NO"
  >
    -100,00
  </span>
</div>
`;

exports[`Figure should render correctly -100 coloredPositive: true, coloredNegative: true, coloredWarning: false 1`] = `
<div
  className="styles__Figure-content--negative___21p0c"
>
  <span
    className="styles__Figure-total___3Z9NO"
  >
    -100,00
  </span>
</div>
`;

exports[`Figure should render correctly -100 coloredPositive: true, coloredNegative: true, coloredWarning: true 1`] = `
<div
  className="styles__Figure-content--warning___1p7x3"
>
  <span
    className="styles__Figure-total___3Z9NO"
  >
    -100,00
  </span>
</div>
`;

exports[`Figure should render correctly 4 coloredPositive: false, coloredNegative: false, coloredWarning: false 1`] = `
<div
  className=""
>
  <span
    className="styles__Figure-total___3Z9NO"
  >
    4,00
  </span>
</div>
`;

exports[`Figure should render correctly 4 coloredPositive: false, coloredNegative: false, coloredWarning: true 1`] = `
<div
  className=""
>
  <span
    className="styles__Figure-total___3Z9NO"
  >
    4,00
  </span>
</div>
`;

exports[`Figure should render correctly 4 coloredPositive: false, coloredNegative: true, coloredWarning: false 1`] = `
<div
  className=""
>
  <span
    className="styles__Figure-total___3Z9NO"
  >
    4,00
  </span>
</div>
`;

exports[`Figure should render correctly 4 coloredPositive: false, coloredNegative: true, coloredWarning: true 1`] = `
<div
  className=""
>
  <span
    className="styles__Figure-total___3Z9NO"
  >
    4,00
  </span>
</div>
`;

exports[`Figure should render correctly 4 coloredPositive: true, coloredNegative: false, coloredWarning: false 1`] = `
<div
  className="styles__Figure-content--positive___GlFUE"
>
  <span
    className="styles__Figure-total___3Z9NO"
  >
    4,00
  </span>
</div>
`;

exports[`Figure should render correctly 4 coloredPositive: true, coloredNegative: false, coloredWarning: true 1`] = `
<div
  className="styles__Figure-content--positive___GlFUE"
>
  <span
    className="styles__Figure-total___3Z9NO"
  >
    4,00
  </span>
</div>
`;

exports[`Figure should render correctly 4 coloredPositive: true, coloredNegative: true, coloredWarning: false 1`] = `
<div
  className="styles__Figure-content--positive___GlFUE"
>
  <span
    className="styles__Figure-total___3Z9NO"
  >
    4,00
  </span>
</div>
`;

exports[`Figure should render correctly 4 coloredPositive: true, coloredNegative: true, coloredWarning: true 1`] = `
<div
  className="styles__Figure-content--positive___GlFUE"
>
  <span
    className="styles__Figure-total___3Z9NO"
  >
    4,00
  </span>
</div>
`;

exports[`Figure should render correctly 100 coloredPositive: false, coloredNegative: false, coloredWarning: false 1`] = `
<div
  className=""
>
  <span
    className="styles__Figure-total___3Z9NO"
  >
    100,00
  </span>
</div>
`;

exports[`Figure should render correctly 100 coloredPositive: false, coloredNegative: false, coloredWarning: true 1`] = `
<div
  className=""
>
  <span
    className="styles__Figure-total___3Z9NO"
  >
    100,00
  </span>
</div>
`;

exports[`Figure should render correctly 100 coloredPositive: false, coloredNegative: true, coloredWarning: false 1`] = `
<div
  className=""
>
  <span
    className="styles__Figure-total___3Z9NO"
  >
    100,00
  </span>
</div>
`;

exports[`Figure should render correctly 100 coloredPositive: false, coloredNegative: true, coloredWarning: true 1`] = `
<div
  className=""
>
  <span
    className="styles__Figure-total___3Z9NO"
  >
    100,00
  </span>
</div>
`;

exports[`Figure should render correctly 100 coloredPositive: true, coloredNegative: false, coloredWarning: false 1`] = `
<div
  className="styles__Figure-content--positive___GlFUE"
>
  <span
    className="styles__Figure-total___3Z9NO"
  >
    100,00
  </span>
</div>
`;

exports[`Figure should render correctly 100 coloredPositive: true, coloredNegative: false, coloredWarning: true 1`] = `
<div
  className="styles__Figure-content--positive___GlFUE"
>
  <span
    className="styles__Figure-total___3Z9NO"
  >
    100,00
  </span>
</div>
`;

exports[`Figure should render correctly 100 coloredPositive: true, coloredNegative: true, coloredWarning: false 1`] = `
<div
  className="styles__Figure-content--positive___GlFUE"
>
  <span
    className="styles__Figure-total___3Z9NO"
  >
    100,00
  </span>
</div>
`;

exports[`Figure should render correctly 100 coloredPositive: true, coloredNegative: true, coloredWarning: true 1`] = `
<div
  className="styles__Figure-content--positive___GlFUE"
>
  <span
    className="styles__Figure-total___3Z9NO"
  >
    100,00
  </span>
</div>
`;

exports[`Figure should render correctly 500 coloredPositive: false, coloredNegative: false, coloredWarning: false 1`] = `
<div
  className=""
>
  <span
    className="styles__Figure-total___3Z9NO"
  >
    500,00
  </span>
</div>
`;

exports[`Figure should render correctly 500 coloredPositive: false, coloredNegative: false, coloredWarning: true 1`] = `
<div
  className=""
>
  <span
    className="styles__Figure-total___3Z9NO"
  >
    500,00
  </span>
</div>
`;

exports[`Figure should render correctly 500 coloredPositive: false, coloredNegative: true, coloredWarning: false 1`] = `
<div
  className=""
>
  <span
    className="styles__Figure-total___3Z9NO"
  >
    500,00
  </span>
</div>
`;

exports[`Figure should render correctly 500 coloredPositive: false, coloredNegative: true, coloredWarning: true 1`] = `
<div
  className=""
>
  <span
    className="styles__Figure-total___3Z9NO"
  >
    500,00
  </span>
</div>
`;

exports[`Figure should render correctly 500 coloredPositive: true, coloredNegative: false, coloredWarning: false 1`] = `
<div
  className="styles__Figure-content--positive___GlFUE"
>
  <span
    className="styles__Figure-total___3Z9NO"
  >
    500,00
  </span>
</div>
`;

exports[`Figure should render correctly 500 coloredPositive: true, coloredNegative: false, coloredWarning: true 1`] = `
<div
  className="styles__Figure-content--positive___GlFUE"
>
  <span
    className="styles__Figure-total___3Z9NO"
  >
    500,00
  </span>
</div>
`;

exports[`Figure should render correctly 500 coloredPositive: true, coloredNegative: true, coloredWarning: false 1`] = `
<div
  className="styles__Figure-content--positive___GlFUE"
>
  <span
    className="styles__Figure-total___3Z9NO"
  >
    500,00
  </span>
</div>
`;

exports[`Figure should render correctly 500 coloredPositive: true, coloredNegative: true, coloredWarning: true 1`] = `
<div
  className="styles__Figure-content--positive___GlFUE"
>
  <span
    className="styles__Figure-total___3Z9NO"
  >
    500,00
  </span>
</div>
`;
